--- a/technical/index.html
+++ b/technical/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Bonhomie - Cultural</title>
-    <?php
-    include('style/style.php');
-    include('links/link.php');
-    ?>
-    
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,">
+    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Bonhomie - Technical</title>
+    <style>
+    </style>
   </head>
   <body>
     <!-- Header -->
@@ -26,11 +31,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="../sports/">Sports</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../technical">Technical</a>
-                </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Cultural</a>
+                  <a class="nav-link" href="#">Technical</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../cultural/">Cultural</a>
                 </li>
               </ul>
             </div>
@@ -73,50 +78,50 @@
     <section id="events" class="events">
 
         <div class="container">
-            <h1 class="text-center text-dark font-weight-bold my-5">Cultural Events</h1>
+            <h1 class="text-center text-dark font-weight-bold my-5">Technical Events</h1>
             <div class="row text-center mx-auto w-100">
                 <div class="col my-5 text-center w-100" title="Hover on image to register">
                   <div class="card card1 text-dark mx-auto" id="card2" style="width: 18rem;">
                       <div class="cardheader">
-                        <img class="img-fluid" src="https://svgshare.com/i/STL.svg" alt="">
+                        <img class="img-fluid" src="hackathon.svg" alt="">
                           <div class="caption">
-                              <h2 class="text-center font-weight-bold text-white">Qira't</h2>
+                              <h2 class="text-center font-weight-bold text-white">Hackathon</h2>
                               <a href="../../event-registration">Register</a>
                           </div>
                       </div>
                     <div class="card-body">
-                        <h3 class="text-center font-weight-bold my-2">Qira't</h3>
-                        <p class="text-center">Bonhomie has a quite good Qira't event every year.</p>
+                        <h3 class="text-center font-weight-bold my-2">Hackathon</h3>
+                        <p class="text-center">Bonhomie has a quite good Hackathon event every year.</p>
                     </div>
                  </div>
                 </div>
                 <div class="col my-5 text-center w-100" title="Hover on image to register">
                   <div class="card text-dark mx-auto" id="card2" style="width: 18rem;">
                       <div class="cardheader">
-                        <img class="img-fluid" src="https://telegra.ph/file/f0deb095b9eeadc95af5c.png" alt="">
+                        <img class="img-fluid" src="cad.svg" alt="">
                           <div class="caption">
-                              <h2 class="text-center font-weight-bold text-white">Mushaira</h2>
+                              <h2 class="text-center font-weight-bold text-white">CAD Contest</h2>
                               <a href="../../event-registration">Register</a>
                           </div>
                       </div>
                     <div class="card-body">
-                        <h3 class="text-center font-weight-bold my-2">Mushaira</h3>
-                        <p class="text-center">Bonhomie has a quite good Mushaira event every year.</p>
+                        <h3 class="text-center font-weight-bold my-2">CAD Contest</h3>
+                        <p class="text-center">Bonhomie has a quite good CAD event every year.</p>
                     </div>
                  </div>
                 </div>
                 <div class="col my-5 text-center w-100" title="Hover on image to register">
                   <div class="card card3 text-dark mx-auto" id="card2" style="width: 18rem;">
                       <div class="cardheader">
-                        <img class="img-fluid" src="https://svgshare.com/i/SSs.svg" alt="">
+                        <img class="img-fluid" src="bridge.svg">
                           <div class="caption">
-                              <h2 class="text-center font-weight-bold text-white">Speech</h2>
+                              <h2 class="text-center font-weight-bold text-white">Bridge Making</h2>
                               <a href="../../event-registration">Register</a>
                           </div>
                       </div>
                     <div class="card-body">
-                        <h3 class="text-center font-weight-bold my-2">Speech</h3>
-                        <p class="text-center">Bonhomie has a quite good Speech event every year.</p>
+                        <h3 class="text-center font-weight-bold my-2">Bridge Making</h3>
+                        <p class="text-center">Bonhomie has a quite good Bridge Making event every year.</p>
                     </div>
                  </div>
                 </div>
@@ -166,5 +171,10 @@
     <script>
      $('.col').tooltip({show: {effect:"none", delay:0}});
     </script>
-   </body>
+    <!-- Optional JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/95931f8504.js" crossorigin="anonymous"></script>
+</body>
 </html>
