Updated too many things

--- a/technical/index.html
+++ b/technical/index.html
@@ -86,7 +86,7 @@
                         <img class="img-fluid" src="hackathon.svg" alt="">
                           <div class="caption">
                               <h2 class="text-center font-weight-bold text-white">Hackathon</h2>
-                              <a href="../../event-registration">Register</a>
+                              <a href="../sports/registration.php">Register</a>
                           </div>
                       </div>
                     <div class="card-body">
@@ -101,7 +101,7 @@
                         <img class="img-fluid" src="cad.svg" alt="">
                           <div class="caption">
                               <h2 class="text-center font-weight-bold text-white">CAD Contest</h2>
-                              <a href="../../event-registration">Register</a>
+                              <a href="../sports/registration.php">Register</a>
                           </div>
                       </div>
                     <div class="card-body">
@@ -116,7 +116,7 @@
                         <img class="img-fluid" src="bridge.svg">
                           <div class="caption">
                               <h2 class="text-center font-weight-bold text-white">Bridge Making</h2>
-                              <a href="../../event-registration">Register</a>
+                              <a href="../sports/registration.php">Register</a>
                           </div>
                       </div>
                     <div class="card-body">
